WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77663
inspector/debugger/pause-in-inline-script.html asserts in chromium debug
https://bugs.webkit.org/show_bug.cgi?id=77663
Summary
inspector/debugger/pause-in-inline-script.html asserts in chromium debug
Nate Chapin
Reported
2012-02-02 11:38:31 PST
See
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=pause-in-inline-script.html
Looks like this test hits an assert in debug builds in MainResourceLoader pretty reliably. Let me know if there's anything I can do to help debug. Marking as crashing in test_expectations.txt in the meantime.
Attachments
Patch
(9.29 KB, patch)
2012-02-03 08:10 PST
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-02-03 08:10:17 PST
Created
attachment 125332
[details]
Patch
Yury Semikhatsky
Comment 2
2012-02-03 08:20:58 PST
Committed
r106662
: <
http://trac.webkit.org/changeset/106662
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug